--- a/src/main/resources/fxml/AJreportTab.fxml
+++ b/src/main/resources/fxml/AJreportTab.fxml
@@ -31,7 +31,7 @@
                         <FXCollections fx:factory="observableArrayList">
                             <String fx:value="All"/>
                             <String fx:value="CVE-2024-5352(任意命令执行)"/>
-                            <String fx:value="CVE-2024-5350(SQL信息泄露)"/>
+<!--                            <String fx:value="CVE-2024-5350(SQL信息泄露)"/>-->
                             <String fx:value="CVE-2024-5356(任意命令执行)"/>
                         </FXCollections>
                     </items>
