--- a/src/main/resources/fxml/AJreportTab.fxml
+++ b/src/main/resources/fxml/AJreportTab.fxml
@@ -19,26 +19,25 @@
                     <Insets top="10" right="10" bottom="10" left="10"/>
                 </padding>
                 <!-- URL 输入框，预填充默认值 -->
-                <TextField fx:id="inUrl" text="http://127.0.0.1:9095" style="-fx-font-size: 14px;" prefWidth="600" prefHeight="30"/>
+                <TextField fx:id="inUrl" text="http://127.0.0.1:9095" style="-fx-font-size: 16px;" prefWidth="600" prefHeight="30"/>
                 <!-- 检测按钮，设置按钮背景颜色和字体颜色 -->
-                <Button fx:id="button" text="检测" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" minHeight="28" minWidth="50"/>
+                <Button fx:id="button" text="检测" style="-fx-background-color: #4CAF50; -fx-text-fill: white;-fx-font-size: 14px;" minHeight="30" minWidth="70"/>
                 <!-- 自定义POST请求的复选框 -->
-                <CheckBox fx:id="checkBoxPost" text="自定义POST" prefWidth="100" prefHeight="28" selected="false"/>
+                <CheckBox fx:id="checkBoxPost" text="自定义POST" prefWidth="150" style="-fx-font-size: 14px;" prefHeight="30" selected="false"/>
                 <!-- 漏洞类型选择框 -->
-                <ComboBox fx:id="comboBox" prefWidth="200" prefHeight="28">
+                <ComboBox fx:id="comboBox" style="-fx-font-size: 14px;" prefWidth="250" prefHeight="30">
                     <items>
                         <!-- 初始化选择框的选项列表 -->
                         <FXCollections fx:factory="observableArrayList">
                             <String fx:value="All"/>
                             <String fx:value="CVE-2024-5352(任意命令执行)"/>
-<!--                            <String fx:value="CVE-2024-5350(SQL信息泄露)"/>-->
+                            <String fx:value="CVE-2024-5350(SQL信息泄露)"/>
                             <String fx:value="CVE-2024-5356(任意命令执行)"/>
                         </FXCollections>
                     </items>
                 </ComboBox>
             </HBox>
         </top>
-
         <!-- 中部显示区 -->
         <center>
             <!-- 使用 GridPane 布局，设置行列间距为 10 -->
