--- a/src/main/resources/fxml/EncryptionDecryption.fxml
+++ b/src/main/resources/fxml/EncryptionDecryption.fxml
@@ -1,97 +1,104 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
-<?import javafx.collections.*?>
-<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
+<?import javafx.scene.text.Font?>
+<?import javafx.collections.FXCollections?>
 <StackPane xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.liev.clouds.webcontroller.encryptiondecryption.EncryptionDecryptionController">
-      <VBox>
-            <HBox spacing="10">
-               <!-- 设置 HBox 的内边距，四边均为 10 -->
-               <padding>
-                  <Insets bottom="10" left="10" right="10" top="10" />
-               </padding>
-                <ComboBox fx:id="codeType" prefHeight="30" prefWidth="200" style="-fx-font-size: 14px;">
-                    <items>
-                        <!-- 初始化选择框的选项列表 -->
-                        <FXCollections fx:factory="observableArrayList">
-                            <String fx:value="UTF-8" />
-                            <String fx:value="GBK" />
-                            <String fx:value="GB2312" />
-                            <String fx:value="BIG5" />
-                            <String fx:value="ISO-8859-1" />
-                        </FXCollections>
-                    </items>
-                </ComboBox>
 
-               <ComboBox fx:id="encodingType" prefHeight="30" prefWidth="250" style="-fx-font-size: 14px;">
-                  <items>
-                     <!-- 初始化选择框的选项列表 -->
-                     <FXCollections fx:factory="observableArrayList">
-                         <String fx:value="请选择转码方式" />
-                         <String fx:value="Base64编码" />
-                         <String fx:value="Unicode编码" />
-                         <String fx:value="URL特殊字符编码" />
-                         <String fx:value="URL全编码" />
-                         <String fx:value="字符串反转" />
-                         <String fx:value="Ascii码" />
-                         <String fx:value="转大写" />
-                         <String fx:value="转小写" />
-                     </FXCollections>
-                  </items>
-               </ComboBox>
+    <VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="728.0" prefWidth="1202.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1">
+        <children>
+            <AnchorPane prefHeight="63.0" prefWidth="1202.0">
+                <children>
+                    <Label layoutX="16.0" layoutY="14.0" prefHeight="36.0" prefWidth="95.0" text="哈希加密：">
+                        <font>
+                            <Font size="18.0" />
+                        </font>
+                    </Label>
+                    <ComboBox fx:id="hashEncryptionType"  layoutX="111.0" layoutY="14.0" prefHeight="36.0" prefWidth="251.0" style="-fx-font-size: 18px;">
+                        <items>
+                            <!-- 初始化选择框的选项列表 -->
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="请选择哈希加密" />
+                                <String fx:value="MD5(16位)" />
+                                <String fx:value="MD5(32位)" />
+                                <String fx:value="SHA1" />
+                                <String fx:value="SHA1(Base64)" />
+                                <String fx:value="SHA256" />
+                                <String fx:value="SHA256(Base64)" />
+                                <String fx:value="SHA384" />
+                                <String fx:value="SHA384(Base64)" />
+                                <String fx:value="SHA512" />
+                                <String fx:value="SHA512(Base64)" />
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                    <ComboBox fx:id="codeType"  layoutX="415.0" layoutY="14.0" prefHeight="36.0" prefWidth="251.0" style="-fx-font-size: 18px;">
+                        <items>
+                            <!-- 初始化选择框的选项列表 -->
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="UTF-8" />
+                                <String fx:value="GBK" />
+                                <String fx:value="GB2312" />
+                                <String fx:value="BIG5" />
+                                <String fx:value="ISO-8859-1" />
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                    <ComboBox fx:id="encodedType"  layoutX="673.0" layoutY="14.0" prefHeight="36.0" prefWidth="251.0" style="-fx-font-size: 18px;">
+                        <items>
+                            <!-- 初始化选择框的选项列表 -->
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="请选择转码方式" />
+                                <String fx:value="Base64编码" />
+                                <String fx:value="Unicode编码" />
+                                <String fx:value="URL特殊字符编码" />
+                                <String fx:value="URL全编码" />
+                                <String fx:value="字符串反转" />
+                                <String fx:value="Ascii码" />
+                                <String fx:value="转大写" />
+                                <String fx:value="转小写" />
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                    <ComboBox fx:id="decodeType"  layoutX="931.0" layoutY="14.0" prefHeight="36.0" prefWidth="251.0" style="-fx-font-size: 18px;">
+                        <items>
+                            <!-- 初始化选择框的选项列表 -->
+                            <FXCollections fx:factory="observableArrayList">
+                                <String fx:value="请选择解码方式" />
+                                <String fx:value="Base64解码" />
+                                <String fx:value="16进制Hex解码" />
+                                <String fx:value="URL解码" />
+                                <String fx:value="Unicode解码" />
+                                <String fx:value="HTML实体解码" />
+                            </FXCollections>
+                        </items>
+                    </ComboBox>
+                </children>
+            </AnchorPane>
+            <AnchorPane prefHeight="663.0" prefWidth="1202.0">
+                <children>
+                    <Label layoutX="14.0" prefHeight="36.0" prefWidth="108.0" text="输入原始值：">
+                        <font>
+                            <Font size="18.0" />
+                        </font>
+                    </Label>
+                    <TextArea fx:id="inputValue" layoutX="12.0" layoutY="36.0" prefHeight="290.0" prefWidth="1179.0" >
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </TextArea>
+                    <TextArea fx:id="outputValue" layoutX="13.0" layoutY="332.0" prefHeight="322.0" prefWidth="1179.0" >
+                        <font>
+                            <Font size="16.0" />
+                        </font>
+                    </TextArea>
+                </children>
+            </AnchorPane>
+        </children>
+    </VBox>
 
-                <ComboBox fx:id="decodingType" prefHeight="30" prefWidth="250" style="-fx-font-size: 14px;">
-                    <items>
-                        <!-- 初始化选择框的选项列表 -->
-                        <FXCollections fx:factory="observableArrayList">
-                            <String fx:value="请选择解码方式" />
-                            <String fx:value="Base64解码" />
-                            <String fx:value="16进制Hex解码" />
-                            <String fx:value="URL解码" />
-                            <String fx:value="Unicode解码" />
-                            <String fx:value="HTML实体解码" />
-                        </FXCollections>
-                    </items>
-                </ComboBox>
 
-                <ComboBox fx:id="encryptionType" prefHeight="30" prefWidth="250" style="-fx-font-size: 14px;">
-                    <items>
-                        <!-- 初始化选择框的选项列表 -->
-                        <FXCollections fx:factory="observableArrayList">
-                            <String fx:value="请选择哈希加密" />
-                            <String fx:value="MD5(16位)" />
-                            <String fx:value="MD5(32位)" />
-                            <String fx:value="SHA1" />
-                            <String fx:value="SHA1(Base64)" />
-                            <String fx:value="SHA256" />
-                            <String fx:value="SHA256(Base64)" />
-                            <String fx:value="SHA384" />
-                            <String fx:value="SHA384(Base64)" />
-                            <String fx:value="SHA512" />
-                            <String fx:value="SHA512(Base64)" />
-                        </FXCollections>
-                    </items>
-                </ComboBox>
-            </HBox>
-
-          <!-- 中部显示区 -->
-              <!-- 使用 GridPane 布局，设置行列间距为 10 -->
-              <GridPane hgap="10" vgap="10">
-                  <!-- 设置 GridPane 的内边距，四边均为 10 -->
-                  <padding>
-                      <Insets bottom="10" left="10" right="10" top="10" />
-                  </padding>
-                  <!-- POST请求数据标签 -->
-                  <Label style="-fx-font-size: 16px;" text="输入数据:" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="0" />
-                  <!-- POST请求数据输入框 -->
-                  <TextArea fx:id="input" prefHeight="270" prefWidth="1175" style="-fx-font-size: 16px;" wrapText="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="1" />
-                  <!-- 结果标签 -->
-                  <Label style="-fx-font-size: 16px;" text="输出数据：" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="2" />
-                  <!-- 结果显示区域 -->
-                  <TextArea fx:id="output" prefHeight="350" prefWidth="1175" style="-fx-font-size: 16px;" wrapText="true" GridPane.columnIndex="0" GridPane.columnSpan="2" GridPane.rowIndex="3" />
-              </GridPane>
-      </VBox>
 </StackPane>
