RuoYi 漏洞检测开发1.0

--- a/src/main/resources/fxml/RuoYi.fxml
+++ b/src/main/resources/fxml/RuoYi.fxml
@@ -12,7 +12,7 @@
             <AnchorPane prefHeight="69.0" prefWidth="1202.0">
                 <children>
                     <TextField fx:id="url" layoutX="16.0" layoutY="19.0" prefHeight="32.0" prefWidth="606.0" style="-fx-font-size: 16px;" text="http://127.0.0.1:80" />
-                    <Button id="check" layoutX="640.0" layoutY="17.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="98.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="检测">
+                    <Button id="check" onAction="#check" layoutX="640.0" layoutY="17.0" mnemonicParsing="false" prefHeight="32.0" prefWidth="98.0" style="-fx-background-color: #4CAF50; -fx-text-fill: white;" text="检测">
                         <font>
                             <Font size="18.0" />
                         </font>
@@ -22,12 +22,12 @@
                             <!-- 初始化选择框的选项列表 -->
                             <FXCollections fx:factory="observableArrayList">
                                 <String fx:value="All" />
-                                <String fx:value="RuoYi 小于 4.6.2 Shiro反序列化" />
-                                <String fx:value="RuoYi 小于 4.6.2 SQL注入" />
+                                <String fx:value="RuoYi 小于 4.6.1 Shiro反序列化 CVE-2021-38241" />
+                                <String fx:value="RuoYi 小于 4.6.2 SQL注入 CVE-2023-49371"/>
                                 <String fx:value="RuoYi 等于 4.7.1 SSTI模板注入" />
                                 <String fx:value="RuoYi 等于 4.7.2 定时任务RCE" />
-                                <String fx:value="RuoYi 小于 4.7.5 SQL注入" />
-                                <String fx:value="RuoYi 等于 4.7.8 任意文件下载" />
+                                <String fx:value="RuoYi 小于 4.7.5 SQL注入 CVE-2022-48114" />
+                                <String fx:value="RuoYi 等于 4.7.8 任意文件下载 CVE-2023-27025" />
                             </FXCollections>
                        </items>
                     </ComboBox>
@@ -35,7 +35,7 @@
             </AnchorPane>
             <AnchorPane prefHeight="70.0" prefWidth="1202.0">
                 <children>
-                    <TextField fx:id="requestHeader" layoutX="240.0" layoutY="15.0" prefHeight="32.0" prefWidth="180.0" style="-fx-font-size: 16px;" />
+                    <TextField fx:id="requestHeader" text="Cookie" layoutX="240.0" layoutY="15.0" prefHeight="32.0" prefWidth="180.0" style="-fx-font-size: 16px;" />
                     <Label layoutX="168.0" layoutY="13.0" prefHeight="36.0" prefWidth="72.0" text="请求头：">
                         <font>
                             <Font size="18.0" />
