--- a/src/main/resources/fxml/AJreport.fxml
+++ b/src/main/resources/fxml/AJreport.fxml
@@ -39,7 +39,7 @@
             </AnchorPane>
             <AnchorPane prefHeight="271.0" prefWidth="1202.0">
                 <children>
-                    <TextArea fx:id="postTxt" layoutX="14.0" layoutY="31.0" prefHeight="226.0" prefWidth="1178.0" style="-fx-font-size: 16px;" />
+                    <TextArea fx:id="postTxt" layoutX="14.0" layoutY="31.0" prefHeight="226.0" prefWidth="1178.0" style="-fx-font-size: 16px;" wrapText="true"/>
                     <Label layoutX="14.0" layoutY="2.0" prefHeight="24.0" prefWidth="143.0" text="POST请求数据：">
                         <font>
                             <Font size="18.0" />
@@ -54,13 +54,13 @@
                             <Font size="18.0" />
                         </font>
                     </Label>
-                    <TextArea fx:id="outComeArea" layoutX="14.0" layoutY="15.0" prefHeight="378.0" prefWidth="577.0" style="-fx-font-size: 16px;" />
+                    <TextArea fx:id="outComeArea" layoutX="14.0" layoutY="15.0" prefHeight="378.0" prefWidth="577.0" wrapText="true" style="-fx-font-size: 16px;" />
                     <Label layoutX="601.0" layoutY="-10.0" prefHeight="24.0" prefWidth="143.0" text="响应：">
                         <font>
                             <Font size="18.0" />
                         </font>
                     </Label>
-                    <TextArea fx:id="responseArea" layoutX="601.0" layoutY="15.0" prefHeight="378.0" prefWidth="591.0" style="-fx-font-size: 16px;" />
+                    <TextArea fx:id="responseArea" layoutX="601.0" layoutY="15.0" prefHeight="378.0" prefWidth="591.0" wrapText="true" style="-fx-font-size: 16px;" />
                 </children>
             </AnchorPane>
         </children>
